# log-anomaly-detection-mvp

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_eda.ipynb
src/: __main__.py
src/data/: loader.py
src/log_anomaly_detection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/log_anomaly_detection/model/: rcf_detector.py  train.py
tests/: test_rcf_detector.py
