[build-system]
requires = ["setuptools<81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "log-anomaly-detection"
version = "0.1.0"
description = "Log anomaly detection MVP"
readme = "README.md"
requires-python = ">=3.11"

# Runtime dependencies (from your list)
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pandas",
  "numpy>=1.24,<3",
  "scikit-learn",
  "matplotlib",
  "mlflow",
  "joblib>=1.3",
  "pydantic",
  "pyarrow",
  "rrcf==0.4.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-s"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)s %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"
